# clean_folder

./: .gitignore  setup.cfg  setup.py
clean_folder/: clean.py
clean_folder.egg-info/: PKG-INFO  SOURCES.txt
my_env/: .gitignore  pyvenv.cfg
my_env/Scripts/: activate  activate.bat  activate.fish  activate.nu  clean-folder-script.py
