[metadata]
name = clean_folder
version = 1
description = Very useful code
url = https://github.com/Nataleia08/clean_folder
author = Orlovska Nataliia
author_email = nataleia.orlovska@gmail.com
package_dir = clean_folder
classifiers = 
    Python version :: Python :: 3
    Licence :: OSI :: MIT Licence
python_requires = >=3.7
[options]
packages_dir = clean_folder
[options.packages.find]
where = clean_folder
